scripts/data_manipulation/antlr4/AttackParser.py
# Generated from Attack.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AttackParser ( Parser ):

    grammarFileName = "Attack.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "' '", "','", "'.'", "' Attack Roll: '", 
                     "', '", "' Attack'", "'+'", "' to hit'", "'reach '", 
                     "'range '", "'/'", "' (see Poor Depth Perception)'", 
                     "'up to '", "'incapacitated'", "' or smaller '", "' or larger '", 
                     "'Hit:'", "'. If the '", "' saving throw'", "' taking '", 
                     "'('", "') '", "' damage'", "'. If the target'", "'additional '", 
                     "'extra '", "'magically aged '", "') damage'", "'This attack'", 
                     "'that'", "'within'", "'directly'", "'restrained'", 
                     "' plus'", "' if used with two hands'", "' to make a melee attack'", 
                     "<INVALID>", "<INVALID>", "'Melee'", "'Ranged'", "'Weapon'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'grappled'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "' or '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "MARKUP", "MELEE_OR_RANGED", 
                      "MELEE", "RANGED", "WEAPON", "SPELL", "DISTANCE", 
                      "SIZE", "TARGET_TYPE", "SAVING_THROW_START", "DICE", 
                      "GRAPPLED", "DAMAGE_TYPE", "NUMBER", "NUMBER_TEXT", 
                      "OR", "ABILITY", "TEXT" ]

    RULE_attack = 0
    RULE_attack2014 = 1
    RULE_attack2024 = 2
    RULE_attackType = 3
    RULE_meleeRanged = 4
    RULE_weaponSpell = 5
    RULE_toHit = 6
    RULE_distance = 7
    RULE_reach = 8
    RULE_range = 9
    RULE_targets = 10
    RULE_hit = 11
    RULE_damageGroup = 12
    RULE_savingThrow = 13
    RULE_extraDamage = 14
    RULE_grappled = 15
    RULE_damage = 16
    RULE_plusDamage = 17
    RULE_versatileDamage = 18
    RULE_damageType = 19
    RULE_extraText = 20

    ruleNames =  [ "attack", "attack2014", "attack2024", "attackType", "meleeRanged", 
                   "weaponSpell", "toHit", "distance", "reach", "range", 
                   "targets", "hit", "damageGroup", "savingThrow", "extraDamage", 
                   "grappled", "damage", "plusDamage", "versatileDamage", 
                   "damageType", "extraText" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    MARKUP=38
    MELEE_OR_RANGED=39
    MELEE=40
    RANGED=41
    WEAPON=42
    SPELL=43
    DISTANCE=44
    SIZE=45
    TARGET_TYPE=46
    SAVING_THROW_START=47
    DICE=48
    GRAPPLED=49
    DAMAGE_TYPE=50
    NUMBER=51
    NUMBER_TEXT=52
    OR=53
    ABILITY=54
    TEXT=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AttackContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attack2014(self):
            return self.getTypedRuleContext(AttackParser.Attack2014Context,0)


        def attack2024(self):
            return self.getTypedRuleContext(AttackParser.Attack2024Context,0)


        def getRuleIndex(self):
            return AttackParser.RULE_attack

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttack" ):
                listener.enterAttack(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttack" ):
                listener.exitAttack(self)




    def attack(self):

        localctx = AttackParser.AttackContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_attack)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.attack2014()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.attack2024()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attack2014Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attackType(self):
            return self.getTypedRuleContext(AttackParser.AttackTypeContext,0)


        def toHit(self):
            return self.getTypedRuleContext(AttackParser.ToHitContext,0)


        def targets(self):
            return self.getTypedRuleContext(AttackParser.TargetsContext,0)


        def hit(self):
            return self.getTypedRuleContext(AttackParser.HitContext,0)


        def extraText(self):
            return self.getTypedRuleContext(AttackParser.ExtraTextContext,0)


        def EOF(self):
            return self.getToken(AttackParser.EOF, 0)

        def distance(self):
            return self.getTypedRuleContext(AttackParser.DistanceContext,0)


        def getRuleIndex(self):
            return AttackParser.RULE_attack2014

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttack2014" ):
                listener.enterAttack2014(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttack2014" ):
                listener.exitAttack2014(self)




    def attack2014(self):

        localctx = AttackParser.Attack2014Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_attack2014)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.attackType()
            self.state = 47
            self.match(AttackParser.T__0)
            self.state = 48
            self.match(AttackParser.T__1)
            self.state = 49
            self.toHit()
            self.state = 50
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 51
            self.match(AttackParser.T__1)
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 52
                self.distance()
                self.state = 54
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 53
                    _la = self._input.LA(1)
                    if not(_la==2 or _la==3):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 56
                self.match(AttackParser.T__1)


            self.state = 60
            self.targets()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 61
                self.match(AttackParser.T__2)


            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 64
                self.match(AttackParser.T__3)


            self.state = 67
            self.match(AttackParser.T__1)
            self.state = 68
            self.hit()
            self.state = 69
            self.extraText()
            self.state = 70
            self.match(AttackParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attack2024Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def meleeRanged(self):
            return self.getTypedRuleContext(AttackParser.MeleeRangedContext,0)


        def toHit(self):
            return self.getTypedRuleContext(AttackParser.ToHitContext,0)


        def distance(self):
            return self.getTypedRuleContext(AttackParser.DistanceContext,0)


        def damageGroup(self):
            return self.getTypedRuleContext(AttackParser.DamageGroupContext,0)


        def extraText(self):
            return self.getTypedRuleContext(AttackParser.ExtraTextContext,0)


        def EOF(self):
            return self.getToken(AttackParser.EOF, 0)

        def getRuleIndex(self):
            return AttackParser.RULE_attack2024

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttack2024" ):
                listener.enterAttack2024(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttack2024" ):
                listener.exitAttack2024(self)




    def attack2024(self):

        localctx = AttackParser.Attack2024Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attack2024)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.meleeRanged()
            self.state = 73
            self.match(AttackParser.T__4)
            self.state = 74
            self.toHit()
            self.state = 75
            self.match(AttackParser.T__5)
            self.state = 76
            self.distance()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 77
                self.match(AttackParser.T__3)


            self.state = 80
            self.match(AttackParser.T__1)
            self.state = 81
            self.damageGroup()
            self.state = 82
            self.extraText()
            self.state = 83
            self.match(AttackParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttackTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def meleeRanged(self):
            return self.getTypedRuleContext(AttackParser.MeleeRangedContext,0)


        def weaponSpell(self):
            return self.getTypedRuleContext(AttackParser.WeaponSpellContext,0)


        def getRuleIndex(self):
            return AttackParser.RULE_attackType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttackType" ):
                listener.enterAttackType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttackType" ):
                listener.exitAttackType(self)




    def attackType(self):

        localctx = AttackParser.AttackTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attackType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.meleeRanged()
            self.state = 86
            self.match(AttackParser.T__1)
            self.state = 87
            self.weaponSpell()
            self.state = 88
            self.match(AttackParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MeleeRangedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MELEE(self):
            return self.getToken(AttackParser.MELEE, 0)

        def RANGED(self):
            return self.getToken(AttackParser.RANGED, 0)

        def MELEE_OR_RANGED(self):
            return self.getToken(AttackParser.MELEE_OR_RANGED, 0)

        def getRuleIndex(self):
            return AttackParser.RULE_meleeRanged

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeleeRanged" ):
                listener.enterMeleeRanged(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeleeRanged" ):
                listener.exitMeleeRanged(self)




    def meleeRanged(self):

        localctx = AttackParser.MeleeRangedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_meleeRanged)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3848290697216) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WeaponSpellContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WEAPON(self):
            return self.getToken(AttackParser.WEAPON, 0)

        def SPELL(self):
            return self.getToken(AttackParser.SPELL, 0)

        def getRuleIndex(self):
            return AttackParser.RULE_weaponSpell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeaponSpell" ):
                listener.enterWeaponSpell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeaponSpell" ):
                listener.exitWeaponSpell(self)




    def weaponSpell(self):

        localctx = AttackParser.WeaponSpellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_weaponSpell)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==42 or _la==43):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ToHitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(AttackParser.NUMBER, 0)

        def getRuleIndex(self):
            return AttackParser.RULE_toHit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToHit" ):
                listener.enterToHit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToHit" ):
                listener.exitToHit(self)




    def toHit(self):

        localctx = AttackParser.ToHitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_toHit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(AttackParser.T__7)
            self.state = 95
            self.match(AttackParser.NUMBER)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 96
                self.match(AttackParser.T__8)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DistanceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reach(self):
            return self.getTypedRuleContext(AttackParser.ReachContext,0)


        def range_(self):
            return self.getTypedRuleContext(AttackParser.RangeContext,0)


        def OR(self):
            return self.getToken(AttackParser.OR, 0)

        def getRuleIndex(self):
            return AttackParser.RULE_distance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDistance" ):
                listener.enterDistance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDistance" ):
                listener.exitDistance(self)




    def distance(self):

        localctx = AttackParser.DistanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_distance)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.reach()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.range_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.reach()
                self.state = 105
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [53]:
                    self.state = 102
                    self.match(AttackParser.OR)
                    pass
                elif token in [2, 3]:
                    self.state = 103
                    _la = self._input.LA(1)
                    if not(_la==2 or _la==3):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 104
                    self.match(AttackParser.T__1)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 107
                self.range_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReachContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(AttackParser.NUMBER, 0)

        def DISTANCE(self):
            return self.getToken(AttackParser.DISTANCE, 0)

        def getRuleIndex(self):
            return AttackParser.RULE_reach

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReach" ):
                listener.enterReach(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReach" ):
                listener.exitReach(self)




    def reach(self):

        localctx = AttackParser.ReachContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_reach)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 111
                self.match(AttackParser.T__9)


            self.state = 114
            self.match(AttackParser.NUMBER)
            self.state = 115
            self.match(AttackParser.T__1)
            self.state = 116
            self.match(AttackParser.DISTANCE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(AttackParser.NUMBER)
            else:
                return self.getToken(AttackParser.NUMBER, i)

        def DISTANCE(self):
            return self.getToken(AttackParser.DISTANCE, 0)

        def getRuleIndex(self):
            return AttackParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)




    def range_(self):

        localctx = AttackParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_range)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(AttackParser.T__10)
            self.state = 119
            self.match(AttackParser.NUMBER)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 120
                self.match(AttackParser.T__11)
                self.state = 121
                self.match(AttackParser.NUMBER)


            self.state = 124
            self.match(AttackParser.T__1)
            self.state = 125
            self.match(AttackParser.DISTANCE)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 126
                self.match(AttackParser.T__12)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TARGET_TYPE(self):
            return self.getToken(AttackParser.TARGET_TYPE, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(AttackParser.NUMBER)
            else:
                return self.getToken(AttackParser.NUMBER, i)

        def NUMBER_TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(AttackParser.NUMBER_TEXT)
            else:
                return self.getToken(AttackParser.NUMBER_TEXT, i)

        def OR(self):
            return self.getToken(AttackParser.OR, 0)

        def SIZE(self):
            return self.getToken(AttackParser.SIZE, 0)

        def grappled(self):
            return self.getTypedRuleContext(AttackParser.GrappledContext,0)


        def GRAPPLED(self):
            return self.getToken(AttackParser.GRAPPLED, 0)

        def getRuleIndex(self):
            return AttackParser.RULE_targets

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTargets" ):
                listener.enterTargets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTargets" ):
                listener.exitTargets(self)




    def targets(self):

        localctx = AttackParser.TargetsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_targets)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 129
                self.match(AttackParser.T__13)


            self.state = 132
            _la = self._input.LA(1)
            if not(_la==51 or _la==52):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==53:
                self.state = 133
                self.match(AttackParser.OR)
                self.state = 134
                _la = self._input.LA(1)
                if not(_la==51 or _la==52):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 137
                self.match(AttackParser.T__1)
                self.state = 138
                _la = self._input.LA(1)
                if not(_la==15 or _la==49):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 141
            self.match(AttackParser.T__1)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 142
                self.match(AttackParser.SIZE)
                self.state = 143
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 146
            self.match(AttackParser.TARGET_TYPE)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 147
                self.grappled()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def savingThrow(self):
            return self.getTypedRuleContext(AttackParser.SavingThrowContext,0)


        def damageGroup(self):
            return self.getTypedRuleContext(AttackParser.DamageGroupContext,0)


        def extraDamage(self):
            return self.getTypedRuleContext(AttackParser.ExtraDamageContext,0)


        def getRuleIndex(self):
            return AttackParser.RULE_hit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHit" ):
                listener.enterHit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHit" ):
                listener.exitHit(self)




    def hit(self):

        localctx = AttackParser.HitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_hit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(AttackParser.T__17)
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 47]:
                self.state = 151
                self.savingThrow()
                pass
            elif token in [2, 51]:
                self.state = 152
                self.damageGroup()
                self.state = 154
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                if la_ == 1:
                    self.state = 153
                    self.extraDamage()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DamageGroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def damage(self):
            return self.getTypedRuleContext(AttackParser.DamageContext,0)


        def plusDamage(self):
            return self.getTypedRuleContext(AttackParser.PlusDamageContext,0)


        def versatileDamage(self):
            return self.getTypedRuleContext(AttackParser.VersatileDamageContext,0)


        def savingThrow(self):
            return self.getTypedRuleContext(AttackParser.SavingThrowContext,0)


        def getRuleIndex(self):
            return AttackParser.RULE_damageGroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDamageGroup" ):
                listener.enterDamageGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDamageGroup" ):
                listener.exitDamageGroup(self)




    def damageGroup(self):
